--- a/vaadin-frontend/pom.xml
+++ b/vaadin-frontend/pom.xml
@@ -145,6 +145,14 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- junit -->
+		<dependency>
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>4.11</version>
+<scope>test</scope>
+</dependency>
+		
 	</dependencies>
 
 	<build>
