--- a/vaadin-frontend/src/main/resources/jbpm.properties
+++ b/vaadin-frontend/src/main/resources/jbpm.properties
@@ -1,6 +1,6 @@
 jbpm.url=http\://localhost\:8080/kie-wb-distribution-wars-6.2.0.CR1-eap6_3
 jbpm.username=anton
 jbpm.password=password1\!
-jbpm.deploymentid=org.fi.muni.diploma.thesis\:service-lifecycle\:2.0.3
+jbpm.deploymentid=org.fi.muni.diploma.thesis\:service-lifecycle\:2.0.3\:myBase\:Session1
 jbpm.processid.newservice=service-lifecycle-new-service
 jbpm.processid.existingservice=service-lifecycle-existing-service
