--- a/service-lifecycle-bpmn-processes/pom.xml
+++ b/service-lifecycle-bpmn-processes/pom.xml
@@ -8,6 +8,22 @@
 	<version>2.2.4</version>
 	<packaging>kjar</packaging>
 	<name>Service Lifecycle Project</name>
+	
+	
+		<repositories>
+		<repository>
+			<id>jboss community repository</id>
+			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+		</repository>
+		
+		<repository>
+			<id>guvnor-m2-repo</id>
+			<name>Guvnor M2 Repo</name>
+			<url>http://localhost:8080/business-central/maven2/</url>
+		</repository>
+	</repositories>
+
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.fi.muni.diploma.thesis</groupId>
@@ -29,15 +45,19 @@
 		</dependency>
 
 	</dependencies>
-	<repositories>
-		<repository>
-			<id>guvnor-m2-repo</id>
-			<name>Guvnor M2 Repo</name>
-			<url>http://localhost:8080/business-central/maven2/</url>
-		</repository>
-	</repositories>
+	
 	<build>
 		<plugins>
+		
+					<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		
 			<plugin>
 				<groupId>org.kie</groupId>
 				<artifactId>kie-maven-plugin</artifactId>
