SOAGovernanceSpecialist has access to whole application, every other role has access only to Task List and Task Detail view - > this corresponds with the previously designed use case diagram

--- a/vaadin-frontend/pom.xml
+++ b/vaadin-frontend/pom.xml
@@ -35,6 +35,12 @@
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
 		
+			<repository>
+			<id>jboss techpreview repository</id>
+			<url>http://maven.repository.redhat.com/techpreview/all/</url>
+		</repository>
+		
+		
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
