--- a/jbpm-custom-workitem-handlers/pom.xml
+++ b/jbpm-custom-workitem-handlers/pom.xml
@@ -17,6 +17,13 @@
 			<id>jboss community repository</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
+		
+		
+			<repository>
+			<id>jboss techpreview repository</id>
+			<url>http://maven.repository.redhat.com/techpreview/all/</url>
+		</repository>
+		
 	</repositories>
 
 
