--- a/service-lifecycle-bpmn-processes/pom.xml
+++ b/service-lifecycle-bpmn-processes/pom.xml
@@ -16,6 +16,11 @@
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
 		
+			<repository>
+			<id>jboss techpreview repository</id>
+			<url>http://maven.repository.redhat.com/techpreview/all/</url>
+		</repository>
+		
 		<repository>
 			<id>guvnor-m2-repo</id>
 			<name>Guvnor M2 Repo</name>
