--- a/service-lifecycle-pojos/pom.xml
+++ b/service-lifecycle-pojos/pom.xml
@@ -15,6 +15,12 @@
 			<id>jboss community repository</id>
 			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
 		</repository>
+		
+			<repository>
+			<id>jboss techpreview repository</id>
+			<url>http://maven.repository.redhat.com/techpreview/all/</url>
+		</repository>
+		
 	</repositories>
 
   
