changed the name of resultant war - the context path is now /service-lifecycle-mgmt

--- a/vaadin-frontend/pom.xml
+++ b/vaadin-frontend/pom.xml
@@ -224,6 +224,7 @@
 				<version>2.2</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<warName>service-lifecycle-mgmt</warName>
 				</configuration>
 			</plugin>
 			<plugin>
