Register task altered - checkboxes has to be checked and additional description added

--- a/service-lifecycle-bpmn-processes/src/test/resources/usergroups.properties
+++ b/service-lifecycle-bpmn-processes/src/test/resources/usergroups.properties
@@ -22,5 +22,6 @@
 #admin=PowerUser,BillingAdmin,
 #guest=guest
 anton=admin,analyst,user,SOAGovernanceSpecialist,ServiceAnalyst,ServiceDeveloper,QASpecialist
+osiris=admin
 anton2=SOAGovernanceSpecialist
 anton3=ServiceDeveloper,analyst
